# esp32-tinyml-predictive-maintenance

./: .gitignore  README.md
components/edge_impulse/: CMakeLists.txt
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_959241_4_compiled.cpp  tflite_learn_959241_4_compiled.h
main/: CMakeLists.txt  main.cpp
